--- a/client-app/src/Pages/CSS/Header.css
+++ b/client-app/src/Pages/CSS/Header.css
@@ -4,6 +4,7 @@
     padding: 15px;
     text-align: center;
     width: 100%;
+    height: 50px;
     position: fixed;
     top: 0;
     z-index: 1000; /* Ensures header stays above other content */
