--- a/client-app/src/Pages/CSS/HomePage.css
+++ b/client-app/src/Pages/CSS/HomePage.css
@@ -4,7 +4,8 @@
   height: 100vh;
   background: url('../../assets/hostel.jpeg') no-repeat center center fixed;
   background-size: cover;
-  position: relative; /* Ensure absolute positioning of child elements works correctly */
+  position: relative; 
+  z-index:0/* Ensure absolute positioning of child elements works correctly */
 }
 
 .back-button {
@@ -29,9 +30,12 @@
   padding: 1rem;
   margin-top: 80px; /* Adjust for fixed header height */
   display: flex;
-  justify-content: center; /* Center align items horizontally */
+  justify-content:space-around; /* Center align items horizontally */
+  position: fixed; /* Relative positioning to keep the user-info in place */
+  z-index: 1000;
+  width: 100%;
   align-items: center;
-  position: relative; /* Relative positioning to keep the user-info in place */
+  
 }
 
 .user-info {
@@ -55,7 +59,7 @@
   border-radius: 5px;
   cursor: pointer;
   position: absolute;
-  right: 20px; /* Positioned on the right side of the header */
+  right: 40px; /* Positioned on the right side of the header */
   top: 50%;
   transform: translateY(-50%); /* Center vertically */
 }
