--- a/client-app/src/Pages/CSS/Fee.css
+++ b/client-app/src/Pages/CSS/Fee.css
@@ -1,10 +1,17 @@
-.choose-container{
-    display:flex;
+.choose-container {
+    display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.8);
-    margin-top: 300px;
     color: white;
-    width:500px;
+    width: 500px;
     height: 310px;
-}
+    margin: 0 auto; /* Center horizontally */
+    position: absolute; /* Allows positioning within the viewport */
+    top: 50%; /* Center vertically within viewport */
+    left: 50%; /* Center horizontally within viewport */
+    transform: translate(-50%, -50%); /* Adjust for the width and height of the container */
+    padding: 20px; /* Add padding for inner spacing */
+    box-sizing: border-box; /* Ensure padding is included in the height and width */
+  }
+  
