--- a/client-app/src/Pages/CSS/StudentDetails.css
+++ b/client-app/src/Pages/CSS/StudentDetails.css
@@ -50,7 +50,8 @@
   }
   
   .add-button {
-    padding: 8px 16px;
+    padding: 8px 8px;
+    margin-bottom: 16px;
     border: none;
     border-radius: 4px;
     background-color: #007bff;
@@ -75,7 +76,7 @@
   }
   
   .student-details button {
-    margin-right: 8px;
+    margin-left: 16px;
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
