--- a/client-app/src/Pages/CSS/StudentProfile.css
+++ b/client-app/src/Pages/CSS/StudentProfile.css
@@ -6,16 +6,7 @@ body {
     background-color: #f9f9f9;
 }
 
-/* Main content area */
-main2 {
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    margin-left: 200; /* Adjust based on the sidebar width */
-    padding: 2rem;
-    flex: 1;
-    height: calc(100vh - 4rem); /* Adjust height to fit between header and footer */
-}
+
 
 /* Profile section styles */
 .profile {
@@ -25,20 +16,16 @@ main2 {
     border-radius: 8px;
     width: 100%;
     max-width: fit-content; 
-    margin: 0; /* Remove default margin */
 }
 
-/* Centering within the main container */
-main2::before {
-    content: "";
-    flex: 1;
-}
 
 /* Adding equal spacing from the top and bottom */
 .profile-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center; /* Center vertically */
+    align-items: center;
+    margin-top: 10px;
     height: 100%;
 }
 
@@ -65,13 +52,13 @@ main2::before {
     margin-bottom: 1rem;
 }
 
-h3 {
+.general-info h3 {
     border-bottom: 2px solid #2c3e50;
     padding-bottom: 0.5rem;
     margin-bottom: 1rem;
 }
 
-p {
+.general-info p {
     margin: 0.5rem 0;
 }
 
