--- a/client-app/src/Pages/CSS/Payment.css
+++ b/client-app/src/Pages/CSS/Payment.css
@@ -1,15 +1,16 @@
 .payment-detail button {
     padding: 10px 20px; /* Increase padding for better click area */
     border-radius: 5px;
-    background-color: blanchedalmond;
+    background-color: white;
     color: black; /* Adjust text color for better readability */
     border: none; /* Remove default border */
     cursor: pointer;
-    margin-top: 20px; /* Space between button and other elements */
+    margin-top: 30px;
+      /* Space between button and other elements */
     font-size: 16px; /* Adjust font size for better readability */
   }
   
   .payment-detail button:hover {
-    background-color: #eed19a; /* Slightly darker shade on hover */
+    background-color: #d5d4d2;
   }
   
