--- a/client-app/src/Pages/CSS/Login.css
+++ b/client-app/src/Pages/CSS/Login.css
@@ -1,135 +1,143 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-  
-  .full {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-    background-image: url('../../assets/login_img.png');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .main {
-    background: rgba(150, 164, 179, 0.9);
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: fit-content;
-    width: 100%;
-    margin-top: 2rem; /* Space between header and login box */
-    margin-bottom: 2rem; /* Space below the login box */
-  }
-  
-  .main h1 {
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    font-size: 24px;
-    text-align: center;
-  }
-  
-  .user, .input {
-    margin-bottom: 1rem;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .input {
-    display: flex;
-    flex-direction: column; /* Ensure inputs are stacked vertically */
-    width: 100%;
-  }
-  
-  .input input {
-    margin-bottom: 1rem; /* Space below each input field */
-    width: 100%;
-    max-width: 320px; /* Ensure input boxes are not too wide */
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: 1px solid #d4d0d0;
-    border-radius: 5px;
-    background-color: #e0dee4;
-    color: #333;
-    text-align: center;
-  }
-  
-  .input input:last-of-type {
-    margin-bottom: 0; /* Remove margin for the last input */
-  }
-  
-  .input input:not(:last-of-type) {
-    margin-bottom: 1rem; /* Space between inputs */
-  }
-  
-  .user select, .input input {
-    width: 100%;
-    max-width: fit-content; 
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: 1px solid #d4d0d0;
-    border-radius: 5px;
-    background-color: #e0dee4;
-    color: #333;
-    text-align: center;
-  }
-  
-  .user select:focus, .input input:focus {
-    border-color: #007bff;
-    background-color: #fff;
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-  }
-  
-  .input input::placeholder {
-    color: transparent; /* Hide placeholder text when input is focused */
-  }
-  
-  .input input:not(:focus)::placeholder {
-    color: #999; /* Show placeholder text when input is not focused */
-  }
-  
-  .forgot {
-    margin-top: 1rem;
-    margin-bottom: 20px;
-    color: #4635ba;
-    text-decoration: none;
-  }
-  
-  .forgot:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  
-  .but {
-    background-color: #2fbd65;
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 16px;
-    width: 50%;
-    margin: 0 auto; /* Center the button */
-  }
-  
-  .but:hover {
-    background-color: #24964a;
-  }
-  
-  .error-popup {
-    background-color: #f44336; /* Red background for error */
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 10px;
-    text-align: center;
-  }
+.full {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  background-image: url('../../assets/login_img.png');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.main {
+  background: rgba(150, 164, 179, 0.9);
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: fit-content;
+  width: 100%;
+  margin-top: 2rem;
+  /* Space between header and login box */
+  margin-bottom: 2rem;
+  /* Space below the login box */
+}
+
+.main h1 {
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  font-size: 24px;
+  text-align: center;
+}
+
+.user,
+.input {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  /* Ensure inputs are stacked vertically */
+  width: 100%;
+}
+
+.input input {
+  margin-bottom: 1rem;
+  /* Space below each input field */
+  width: 100%;
+  max-width: 320px;
+  /* Ensure input boxes are not too wide */
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #d4d0d0;
+  border-radius: 5px;
+  background-color: #e0dee4;
+  color: #333;
+  text-align: center;
+}
+
+.input input:last-of-type {
+  margin-bottom: 0;
+  /* Remove margin for the last input */
+}
+
+.input input:not(:last-of-type) {
+  margin-bottom: 1rem;
+  /* Space between inputs */
+}
+
+.user select,
+.input input {
+  width: 100%;
+  max-width: fit-content;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #d4d0d0;
+  border-radius: 5px;
+  background-color: #e0dee4;
+  color: #333;
+  text-align: center;
+}
+
+.user select:focus,
+.input input:focus {
+  border-color: #007bff;
+  background-color: #fff;
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.input input::placeholder {
+  color: transparent;
+  /* Hide placeholder text when input is focused */
+}
+
+.input input:not(:focus)::placeholder {
+  color: #999;
+  /* Show placeholder text when input is not focused */
+}
+
+.forgot {
+  margin-top: 1rem;
+  margin-bottom: 20px;
+  color: #4635ba;
+  text-decoration: none;
+}
+
+.forgot:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.but {
+  background-color: #2fbd65;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 50%;
+  margin: 0 auto;
+  /* Center the button */
+}
+
+.but:hover {
+  background-color: #24964a;
+}
+
+.error-popup {
+  background-color: #f44336;
+  /* Red background for error */
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+  text-align: center;
+}
