--- a/client-app/src/Pages/CSS/LandingPage.css
+++ b/client-app/src/Pages/CSS/LandingPage.css
@@ -1,62 +1,26 @@
 /* Body background color remains fixed */
 body {
-  background-color: rgb(223, 223, 231);
+  background-color: #B3B4BD;
   overflow-x: hidden;
   margin: 0;
   height: 100%;
-    padding: 0;
-    font-family: Arial, sans-serif;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
-/* Container for the landing title */
-.landing-title {
-  background-color: rgb(70, 130, 180);
-  color: white;
-  text-align: center;
-  padding: 20px;
-  border-radius: 10px;
-  position: relative;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  margin-top: 80px;
-}
-
-/* The actual text that moves */
-.landing-title h1 {
-  position: absolute;
-  white-space: nowrap;
-  animation: moveText 10s linear infinite;
-}
-
-/* Keyframes for moving the text from left to right */
-@keyframes moveText {
-  0% {
-    transform: translateX(-100%);
-    /* Start off-screen to the left */
-  }
-
-  100% {
-    transform: translateX(100%);
-    /* End off-screen to the right */
-  }
-}
 .landing-page {
   text-align: center;
   background-color: white;
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  
-    /* Centering the landing page content */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #B3B4BD;
+
+  /* Centering the landing page content */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 /* Container for buttons */
 .button-container {
   display: flex;
@@ -69,11 +33,11 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #333;
+  background-color: #56596c;
     color: white;
     border: none;
     border-radius: 5px;
 }
 .btn:hover {
-  background-color: #555;
+  background-color: #141619;
 }
