--- a/client-app/src/Pages/CSS/StudentDetails.css
+++ b/client-app/src/Pages/CSS/StudentDetails.css
@@ -12,9 +12,9 @@
     /* Ensure boxes are square */
     max-width: calc(25% - 16px);
     /* Ensure boxes do not exceed 25% of the container width */
-    background-color: #f1f1f1;
+    background-color: #56596C;
     padding: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid #2C2E3A;
     border-radius: 8px;
     cursor: pointer;
     box-sizing: border-box;
@@ -24,11 +24,11 @@
     align-items: center;
     background-size: cover;
     background-position: center;
-    color: #333;
+    color: white;
   }
   
   .student-box:hover {
-    background-color: #e1e1e1;
+    background-color: #141619;
   }
   
   .student-box p {
