--- a/client-app/src/Pages/CSS/IVRS.css
+++ b/client-app/src/Pages/CSS/IVRS.css
@@ -14,9 +14,9 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ddd;
+  border: 1px solid white;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: white;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -52,7 +52,7 @@
 }
 
 .leave-history-table th {
-  background-color: #4CAF50;
+  background-color: #050A44;
   color: white;
 }
 
@@ -69,7 +69,7 @@
   display: block;
   margin: 20px auto;
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #0A21C0;
   color: white;
   border: none;
   border-radius: 4px;
@@ -78,7 +78,7 @@
 }
 
 .apply-button:hover {
-  background-color: #45a049;
+  background-color: #050A44;
   transform: scale(1.05);
 }
 
@@ -144,7 +144,7 @@
 
 .leave-history-table button {
   padding: 6px 12px;
-  background-color: #2196F3;
+  background-color: #0A21C0;
   color: white;
   margin: 10px;
   border: none;
