--- a/client-app/src/Pages/CSS/Information.css
+++ b/client-app/src/Pages/CSS/Information.css
@@ -56,13 +56,13 @@
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #0A21C0;
     color: white;
     cursor: pointer;
 }
 
 .back-button:hover {
-    background-color: #0056b3;
+    background-color: #050A44;
 }
 
 .view-toggle {
@@ -76,20 +76,20 @@
     border: none;
     border-radius: 4px;
     background-color: #f1f1f1;
-    color: #333;
+    color: #141619;
     cursor: pointer;
     margin: 0 5px;
 }
 
 .toggle-button.active {
-    background-color: #007bff;
+    background-color: #0A21C0;
     color: white;
 }
 
 .details-info {
-    background-color: #fff;
+    background-color: white;
     padding: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     border-radius: 8px;
     margin-top: 16px;
 }
