--- a/client-app/src/Pages/CSS/StudentDetails.css
+++ b/client-app/src/Pages/CSS/StudentDetails.css
@@ -141,8 +141,6 @@
   background-color: #0056b3;
 }
 
-
-
 .back-btn {
   padding: 10px 20px;
   border: none;
@@ -162,3 +160,61 @@
   align-items: center;
   margin-top: 50px;
   }
+
+  input[type="file"] {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 8px;
+  }
+  .file-upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+  
+  .file-upload input[type="file"] {
+    display: none;
+  }
+  
+  .custom-file-upload {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .custom-file-upload:hover {
+    background-color: #0056b3;
+  }
+  
+  .upload-btn {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .upload-btn:hover {
+    background-color: #218838;
+  }
+  .delete-all-btn {
+    background-color: #ff4d4d; /* Red color */
+    margin-left: 40%;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px; /* Add margin to space it from the grid */
+  }
+  
+  .delete-all-btn:hover {
+    background-color: #ff1a1a; /* Darker red on hover */
+  }
+  
