--- a/client-app/src/Pages/CSS/FoodTokenPage.css
+++ b/client-app/src/Pages/CSS/FoodTokenPage.css
@@ -1,43 +1,27 @@
 /* General styles */
-.food-token-page {
+
+
+.food-token-page h1 {
+  color: #141619;
+  text-align:center;
   padding: 20px;
 }
 
-food-token-page h1 {
-  color: #141619;
-  text-align: center;
-}
-
-.food-item-list h2 {
-  color: #141619;
-  text-align: center;
-}
-
-.food-item-list, .book-token-form, .tokens-list, .qr-code {
-  margin: 20px 0;
-}
-
-ul {
+.tokens-list ul {
   list-style-type: none;
   padding: 0;
 }
 
-/* Food items section */
-.food-item-list ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
 .food-item {
-  background-color: #f4f4f4;
-  border: 1px solid #ddd;
+  background-color: white;
+  border: 3px solid #B3B4BD;
   border-radius: 8px;
   margin: 10px;
   padding: 15px;
   width: 200px;
   text-align: center;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 10px #B3B4BD;
 }
 
 .food-item-image {
@@ -60,28 +44,33 @@ ul {
 }
 
 /* Book token form */
+.book-token-form h2{
+  text-align: center;
+}
+
 .book-token-form {
-  background-color: #f9f9f9;
-  padding: 20px;
+  margin-top: 40px;
+  background-color: white;
+  padding: 10px;
   border-radius: 8px;
-  border: 1px solid #ddd;
+  border: 3px solid #56596c;
   max-width: 400px;
   margin: 0 auto;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .book-token-form input[type="text"], 
 .book-token-form input[type="number"], 
 .book-token-form input[type="date"] {
-  width: 100%;
+  width: 90%;
   padding: 10px;
-  margin-bottom: 15px;
+  margin-top: 15px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #B3B4BD;
 }
 
 .book-token-form button {
-  width: 100%;
+  width: 90%;
+  margin: 20px;
   padding: 10px;
   background-color: #0A21C0;
   color: white;
@@ -92,7 +81,10 @@ ul {
 }
 
 .book-token-form button:hover {
-  background-color: #050A44;
+  transform: scale(1.05);
+}
+.book-token-form select {
+  cursor: pointer;
 }
 
 /* Tokens list */
@@ -102,10 +94,10 @@ ul {
 }
 
 .token-item {
-  background-color: #fff;
+  background-color: white;
   padding: 15px;
   border-radius: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #B3B4BD;
   margin: 10px 0;
   display: flex;
   justify-content: space-between;
@@ -123,15 +115,19 @@ ul {
 }
 
 .token-item button:hover {
-  background-color: #050A44;
+  background-color: white;
+  color: black;
+  border: 2px solid #0A21C0;
 }
 
 .token-item button:nth-child(2) {
-  background-color: #dc3545;
+  background-color: #050A44;
 }
 
 .token-item button:nth-child(2):hover {
-  background-color: #c82333;
+  background-color: white;
+  color: black;
+  border: 2px solid #050A44;
 }
 
 /* QR Code section */
@@ -160,7 +156,7 @@ ul {
   
   /* Styles for the overlay */
   .error-modal-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #B3B4BD;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -180,12 +176,12 @@ ul {
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #0A21C0;
     color: white;
     cursor: pointer;
   }
   
   .error-modal button:hover {
-    background-color: #0056b3;
+    background-color: #050A44;
   }
   
