--- a/client-app/src/Pages/CSS/StudentProfile.css
+++ b/client-app/src/Pages/CSS/StudentProfile.css
@@ -2,7 +2,7 @@
 .profile {
     background-color: white;
     padding: 0.5rem;
-    box-shadow: #2C2E3A;
+    border: 3px solid #56596c;
     border-radius: 8px;
     width: 100%;
     max-width: fit-content; 
